// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  className="w-1/2"
  style={
    {
      "backgroundColor": "gray",
      "height": 1,
    }
  }
/>
`;

exports[`renders correctly 2`] = `
<View
  className="w-full"
  style={
    {
      "backgroundColor": "gray",
      "height": 1,
    }
  }
/>
`;
